@@ -159,13 +159,13 @@ class KeyControllerTest {
     @BeforeEach
     void setUp() {
         openMocks = MockitoAnnotations.openMocks(this);
-        when(registry.modelConverter(eq(ApiConstants.V_7_2))).thenReturn(keyEntityToV72ModelConverter);
-        when(registry.itemConverter(eq(ApiConstants.V_7_2))).thenReturn(keyEntityToV72KeyItemModelConverter);
-        when(registry.versionedItemConverter(eq(ApiConstants.V_7_2))).thenReturn(keyEntityToV72KeyVersionItemModelConverter);
+        when(registry.modelConverter(ApiConstants.V_7_2)).thenReturn(keyEntityToV72ModelConverter);
+        when(registry.itemConverter(ApiConstants.V_7_2)).thenReturn(keyEntityToV72KeyItemModelConverter);
+        when(registry.versionedItemConverter(ApiConstants.V_7_2)).thenReturn(keyEntityToV72KeyVersionItemModelConverter);
         when(registry.versionedEntityId(any(URI.class), anyString(), anyString())).thenCallRealMethod();
         when(registry.entityId(any(URI.class), anyString())).thenCallRealMethod();
         underTest = new KeyController(registry, vaultService);
-        when(vaultService.findByUri(eq(HTTPS_LOCALHOST_8443))).thenReturn(vaultFake);
+        when(vaultService.findByUri(HTTPS_LOCALHOST_8443)).thenReturn(vaultFake);
         when(vaultFake.baseUri()).thenReturn(HTTPS_LOCALHOST_8443);
         when(vaultFake.keyVaultFake()).thenReturn(keyVaultFake);
     }
@@ -254,7 +254,7 @@ class KeyControllerTest {
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_1)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_1))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convert(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(RESPONSE);
@@ -266,7 +266,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(keyVaultFake).createKeyVersion(eq(KEY_NAME_1), any(KeyCreateDetailedInput.class));
         verify(vaultFake).getRecoveryLevel();
@@ -279,7 +279,7 @@ class KeyControllerTest {
         //given
         when(keyVaultFake.getEntities())
                 .thenReturn(entities);
-        when(entities.getVersions(eq(new KeyEntityId(HTTPS_LOCALHOST_8443, KEY_NAME_1, null))))
+        when(entities.getVersions(new KeyEntityId(HTTPS_LOCALHOST_8443, KEY_NAME_1, null)))
                 .thenThrow(new NotFoundException("not found"));
 
         //when
@@ -303,7 +303,7 @@ class KeyControllerTest {
                 .toString();
         when(keyVaultFake.getEntities())
                 .thenReturn(entities);
-        when(entities.getVersions(eq(baseUri))).thenReturn(fullList);
+        when(entities.getVersions(baseUri)).thenReturn(fullList);
         when(entities.getReadOnlyEntity(any())).thenAnswer(invocation -> {
             final var keyEntityId = invocation.getArgument(0, VersionedKeyEntityId.class);
             return createEntity(keyEntityId, createRequest(null, null, null));
@@ -339,7 +339,7 @@ class KeyControllerTest {
         final var baseUri = new KeyEntityId(HTTPS_LOCALHOST_8443, KEY_NAME_1, null);
         when(keyVaultFake.getEntities())
                 .thenReturn(entities);
-        when(entities.getVersions(eq(baseUri))).thenReturn(fullList);
+        when(entities.getVersions(baseUri)).thenReturn(fullList);
         when(entities.getReadOnlyEntity(any())).thenAnswer(invocation -> {
             final var keyEntityId = invocation.getArgument(0, VersionedKeyEntityId.class);
             return createEntity(keyEntityId, createRequest(null, null, null));
@@ -350,7 +350,7 @@ class KeyControllerTest {
         });
         final var expected = fullList.stream()
                 .map(e -> new VersionedKeyEntityId(HTTPS_LOCALHOST_8443, KEY_NAME_1, e).asUri(HTTPS_LOCALHOST_8443))
-                .collect(Collectors.toList());
+                .toList();
 
         //when
         final var actual =
@@ -363,7 +363,7 @@ class KeyControllerTest {
         final var actualList = actualBody.getValue().stream()
                 .map(KeyVaultKeyItemModel::getKeyId)
                 .map(URI::create)
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertIterableEquals(expected, actualList);
         Assertions.assertNull(actualBody.getNextLink());
@@ -381,18 +381,18 @@ class KeyControllerTest {
                 .thenReturn(entities);
         when(keyVaultFake.getDeletedEntities())
                 .thenReturn(deletedEntities);
-        doNothing().when(keyVaultFake).delete(eq(baseUri));
+        doNothing().when(keyVaultFake).delete(baseUri);
         when(vaultFake.getRecoveryLevel())
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(deletedEntities.getLatestVersionOfEntity((eq(baseUri))))
+        when(deletedEntities.getLatestVersionOfEntity(baseUri))
                 .thenReturn(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         final var request = createRequest(operations, expiry, notBefore);
         final ReadOnlyKeyVaultKeyEntity entity = createEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_1, request);
         entity.setDeletedDate(TIME_10_MINUTES_AGO);
         entity.setScheduledPurgeDate(TIME_IN_10_MINUTES);
-        when(deletedEntities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(deletedEntities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convertDeleted(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(DELETED_RESPONSE);
@@ -404,16 +404,16 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(DELETED_RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         final var inOrder = inOrder(keyVaultFake);
-        inOrder.verify(keyVaultFake).delete(eq(baseUri));
+        inOrder.verify(keyVaultFake).delete(baseUri);
         inOrder.verify(keyVaultFake, atLeastOnce()).getDeletedEntities();
         verify(keyVaultFake, never()).getEntities();
-        verify(deletedEntities).getLatestVersionOfEntity(eq(baseUri));
-        verify(deletedEntities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        verify(deletedEntities).getLatestVersionOfEntity(baseUri);
+        verify(deletedEntities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convertDeleted(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
@@ -429,18 +429,18 @@ class KeyControllerTest {
                 .thenReturn(entities);
         when(keyVaultFake.getDeletedEntities())
                 .thenReturn(deletedEntities);
-        doNothing().when(keyVaultFake).delete(eq(baseUri));
+        doNothing().when(keyVaultFake).delete(baseUri);
         when(vaultFake.getRecoveryLevel())
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(entities.getLatestVersionOfEntity((eq(baseUri))))
+        when(entities.getLatestVersionOfEntity(baseUri))
                 .thenReturn(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         final var request = createRequest(operations, expiry, notBefore);
         final ReadOnlyKeyVaultKeyEntity entity = createEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_1, request);
         entity.setDeletedDate(TIME_10_MINUTES_AGO);
         entity.setScheduledPurgeDate(TIME_IN_10_MINUTES);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convert(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(RESPONSE);
@@ -452,16 +452,16 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         final var inOrder = inOrder(keyVaultFake);
-        inOrder.verify(keyVaultFake).recover(eq(baseUri));
+        inOrder.verify(keyVaultFake).recover(baseUri);
         inOrder.verify(keyVaultFake, atLeastOnce()).getEntities();
         verify(keyVaultFake, never()).getDeletedEntities();
-        verify(entities).getLatestVersionOfEntity(eq(baseUri));
-        verify(entities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        verify(entities).getLatestVersionOfEntity(baseUri);
+        verify(entities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convert(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
@@ -479,13 +479,13 @@ class KeyControllerTest {
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(entities.getLatestVersionOfEntity((eq(baseUri))))
+        when(entities.getLatestVersionOfEntity(baseUri))
                 .thenReturn(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         final var request = createRequest(operations, expiry, notBefore);
         final ReadOnlyKeyVaultKeyEntity entity = createEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_1, request);
         entity.setDeletedDate(TIME_10_MINUTES_AGO);
         entity.setScheduledPurgeDate(TIME_IN_10_MINUTES);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convertDeleted(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(DELETED_RESPONSE);
@@ -497,14 +497,14 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(DELETED_RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         verify(keyVaultFake, never()).getEntities();
         verify(keyVaultFake, atLeastOnce()).getDeletedEntities();
-        verify(entities).getLatestVersionOfEntity(eq(baseUri));
-        verify(entities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        verify(entities).getLatestVersionOfEntity(baseUri);
+        verify(entities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convertDeleted(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
@@ -522,11 +522,11 @@ class KeyControllerTest {
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(entities.getLatestVersionOfEntity((eq(baseUri))))
+        when(entities.getLatestVersionOfEntity(baseUri))
                 .thenReturn(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         final var request = createRequest(operations, expiry, notBefore);
         final ReadOnlyKeyVaultKeyEntity entity = createEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_1, request);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convert(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(RESPONSE);
@@ -538,13 +538,13 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         verify(keyVaultFake, atLeastOnce()).getEntities();
-        verify(entities).getLatestVersionOfEntity(eq(baseUri));
-        verify(entities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        verify(entities).getLatestVersionOfEntity(baseUri);
+        verify(entities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convert(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
@@ -581,7 +581,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
         Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
@@ -626,7 +626,7 @@ class KeyControllerTest {
         Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
         final var expectedNextLink = HTTPS_LOCALHOST_8443 + "/keys?api-version=7.2&$skiptoken=1&maxresults=1";
         Assertions.assertEquals(expectedNextLink, actual.getBody().getNextLink());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
@@ -671,7 +671,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
         Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
@@ -700,7 +700,7 @@ class KeyControllerTest {
         entity.setScheduledPurgeDate(TIME_IN_10_MINUTES);
         final var nonNullRecoveryLevel = Optional.ofNullable(recoveryLevel).orElse(RecoveryLevel.PURGEABLE);
         if (!nonNullRecoveryLevel.isPurgeable()) {
-            doThrow(IllegalStateException.class).when(keyVaultFake).purge(eq(UNVERSIONED_KEY_ENTITY_ID_1));
+            doThrow(IllegalStateException.class).when(keyVaultFake).purge(UNVERSIONED_KEY_ENTITY_ID_1);
         }
 
         //when
@@ -713,12 +713,12 @@ class KeyControllerTest {
         }
 
         //then
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         verify(keyVaultFake, never()).getDeletedEntities();
-        verify(keyVaultFake, atLeastOnce()).purge(eq(UNVERSIONED_KEY_ENTITY_ID_1));
+        verify(keyVaultFake, atLeastOnce()).purge(UNVERSIONED_KEY_ENTITY_ID_1);
         verify(keyVaultFake, never()).getEntities();
         verify(entities, never()).listLatestEntities();
         verify(keyEntityToV72KeyItemModelConverter, never()).convertDeleted(same(entity), eq(HTTPS_LOCALHOST_8443));
@@ -761,7 +761,7 @@ class KeyControllerTest {
         Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
         final var expectedNextLink = HTTPS_LOCALHOST_8443 + "/deletedkeys?api-version=7.2&$skiptoken=1&maxresults=1";
         Assertions.assertEquals(expectedNextLink, actual.getBody().getNextLink());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
@@ -787,7 +787,7 @@ class KeyControllerTest {
                 .thenReturn(recoveryLevel);
         when(vaultFake.getRecoverableDays())
                 .thenReturn(recoverableDays);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convert(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(RESPONSE);
@@ -799,13 +799,13 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         verify(keyVaultFake).getEntities();
-        verify(entities, never()).getLatestVersionOfEntity(eq(baseUri));
-        verify(entities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        verify(entities, never()).getLatestVersionOfEntity(baseUri);
+        verify(entities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convert(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
@@ -837,7 +837,7 @@ class KeyControllerTest {
                 .thenReturn(entities);
         when(vaultFake.getRecoveryLevel())
                 .thenReturn(RecoveryLevel.PURGEABLE);
-        when(entities.getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3)))
+        when(entities.getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3))
                 .thenReturn(entity);
         when(keyEntityToV72ModelConverter.convert(same(entity), eq(HTTPS_LOCALHOST_8443)))
                 .thenReturn(RESPONSE);
@@ -850,12 +850,12 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
         Assertions.assertSame(RESPONSE, actual.getBody());
-        verify(vaultService).findByUri(eq(HTTPS_LOCALHOST_8443));
+        verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
         verify(vaultFake).getRecoverableDays();
         verify(keyVaultFake).getEntities();
-        verify(entities, never()).getLatestVersionOfEntity(eq(baseUri));
+        verify(entities, never()).getLatestVersionOfEntity(baseUri);
         final var inOrder = inOrder(keyVaultFake, entities);
         if (operations != null) {
             inOrder.verify(keyVaultFake)
@@ -866,30 +866,30 @@ class KeyControllerTest {
         }
         if (enabled != null) {
             inOrder.verify(keyVaultFake)
-                    .setEnabled(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), eq(enabled));
+                    .setEnabled(VERSIONED_KEY_ENTITY_ID_1_VERSION_3, enabled);
         } else {
             inOrder.verify(keyVaultFake, never())
                     .setEnabled(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), anyBoolean());
         }
         if (expiry != null || notBefore != null) {
             inOrder.verify(keyVaultFake)
-                    .setExpiry(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), eq(notBefore), eq(expiry));
+                    .setExpiry(VERSIONED_KEY_ENTITY_ID_1_VERSION_3, notBefore, expiry);
         } else {
             inOrder.verify(keyVaultFake, never())
                     .setExpiry(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), any(), any());
         }
         if (tags != null) {
             inOrder.verify(keyVaultFake)
-                    .clearTags(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+                    .clearTags(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
             inOrder.verify(keyVaultFake)
                     .addTags(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), same(updateKeyRequest.getTags()));
         } else {
             inOrder.verify(keyVaultFake, never())
-                    .clearTags(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+                    .clearTags(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
             inOrder.verify(keyVaultFake, never())
                     .addTags(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3), anyMap());
         }
-        inOrder.verify(entities).getReadOnlyEntity(eq(VERSIONED_KEY_ENTITY_ID_1_VERSION_3));
+        inOrder.verify(entities).getReadOnlyEntity(VERSIONED_KEY_ENTITY_ID_1_VERSION_3);
         verify(keyEntityToV72ModelConverter).convert(same(entity), eq(HTTPS_LOCALHOST_8443));
     }
 
